<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:title="Update image">
        <menu>
            <item android:id="@+id/take_capture"
                android:title="@string/take_cap"
                app:showAsAction="never"/>

            <item android:id="@+id/choose_img"
                android:title="@string/choose_img"
                app:showAsAction="never"/>

            <item android:id="@+id/remove_img"
                android:title="@string/remove_img"
                app:showAsAction="never"/>
        </menu>
    </item>

    <item android:id="@+id/change_pass"
        android:title="Change password"/>

    <item android:id="@+id/change_phone"
        android:title="Change phone"/>
</menu>