<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="10dp"
            android:weightSum="3">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/email"
                android:textColor="@android:color/black"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/login_mail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:hint="ahmed@gmail.com"
                android:inputType="textEmailAddress"
                android:textSize="20sp"
                android:background="@drawable/draw_edittext"
                android:padding="5dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="10dp"
            android:weightSum="3">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:textSize="24sp"
                android:textColor="@android:color/black"
                android:layout_weight="1"
                />

            <EditText
                android:id="@+id/login_pass"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:hint="********"
                android:inputType="textPassword"
                android:textSize="20sp"
                android:background="@drawable/draw_edittext"
                android:padding="5dp"/>
        </LinearLayout>

        <TextView
            android:id="@+id/forget_pass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:textSize="16dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="40dp">

            <Button
                android:id="@+id/signup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_marginStart="50dp"
                android:text="@string/sign_up"
                android:textSize="20sp"
                android:textAllCaps="false"
                android:background="@drawable/draw_button"
                android:padding="30dp"/>

            <Button
                android:id="@+id/signin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="50dp"
                android:text="@string/sign_in"
                android:textSize="20sp"
                android:textAllCaps="false"
                android:background="@drawable/draw_button"
                android:padding="30dp"/>
        </RelativeLayout>
    </LinearLayout>
</ScrollView>